<resources>
    <string name="app_name">GreenMart</string>
    <string name="welcome_tag">Welcome</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_two">Welcome back!</string>
    <string name="welcome_rider">Lorem ipsum dolor sit amet, consetetur \nsadipscing elitr, sed diam nonumy</string>
    <string name="google">Continue with google</string>
    <string name="welcome_rider_two">Sign into your account</string>
    <string name="create_account">Create an account</string>
    <string name="have_an_account">Already have an account ?</string>
    <string name="login">Login</string>
    <string name="amount">N5000</string>
    <string name="freshpeach">Fresh Peach</string>
    <string name="dozen">dozen</string>
    <string name="rating">4.5</string>
    <string name="review">(89 reviews)</string>
    <string name="quantity">Quantity</string>
    <string name="add_to">Add to cart</string>
    <string name="description">Organic Mountain works as a seller for many organic growers of organic peach. Fresh Peach are easy to spot in your produce aisle. They are just like regular peach, but they will usually have a few more scars on the outside of the peach skin.</string>
    <string name="more">more</string>
    <string name="email_address">Email Address</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
</resources>